Z-index fix for destacking box.

--- a/src/components/FeaturePicker/FeaturePickerStyles.scss
+++ b/src/components/FeaturePicker/FeaturePickerStyles.scss
@@ -44,6 +44,7 @@
 
 .featurePicker {
     width: 350px;
+    z-index: 1;
 }
 
 .featurePicker:after {
